--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="header-right text-right">
-                                <a href="#">Say hello! info-beyondbit@gmail.com</a>
+                                <a href="#">Say hello! info.beyondbit@gmail.com</a>
                             </div>
                         </div>
                     </div>
